objects/sf_devops__Work_Item_Open_Change_Request__e.object
<CustomObject>
    <description>Event to notify when a change request for a Work Item feature branch is created</description>
    <fields>
        <fullName>sf_devops__Remote_Reference__c</fullName>
        <label>Remote Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Target_Stage_Id__c</fullName>
        <label>Target Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Work_Item_Id__c</fullName>
        <label>Work Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Work Item Open Change Request</label>
    <pluralLabel>Work Item Open Change Requests</pluralLabel>
</CustomObject>